--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,1 +1,5 @@
-$text-color1 : #0282f9;
+$main-color : #1c1c1c;
+$nav-accent-color: #464646;
+$blue-color: #0385f4;
+$footer-color: #303030;
+$white-color: white;
